--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,9 @@
 include LICENSE
 
 recursive-include django_crispy_jcaptcha
-#recursive-include django_crispy_jcaptcha/static
-#recursive-include django_crispy_jcaptcha/migrations/
-#recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.jpg
-#recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.png
-#recursive-include django_crispy_jcaptcha/static/css/jcaptcha *.css
-#recursive-include django_crispy_jcaptcha/static/js/jcaptcha *.js
+recursive-include django_crispy_jcaptcha/static
+recursive-include django_crispy_jcaptcha/migrations/
+recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.jpg
+recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.png
+recursive-include django_crispy_jcaptcha/static/css/jcaptcha *.css
+recursive-include django_crispy_jcaptcha/static/js/jcaptcha *.js
