--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include LICENSE
 recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.jpg
 recursive-include django_crispy_jcaptcha/static/images/jcaptcha *.png
+recursive-include django_crispy_jcaptcha/static/images/jcaptcha2 *.jpg
+recursive-include django_crispy_jcaptcha/static/images/jcaptcha2 *.png
 recursive-include django_crispy_jcaptcha/static/css/jcaptcha *.css
 recursive-include django_crispy_jcaptcha/static/js/jcaptcha *.js
